# ChangeLog for x11-themes/greybird
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/greybird/ChangeLog,v 1.10 2012/03/21 06:24:31 ssuominen Exp $

  21 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> -greybird-0.4.ebuild,
  -greybird-0.5.ebuild:
  old

  21 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> greybird-0.6.ebuild:
  amd64/x86 stable

*greybird-0.6 (18 Mar 2012)

  18 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +greybird-0.6.ebuild:
  Version bump.

*greybird-0.5 (06 Mar 2012)

  06 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +greybird-0.5.ebuild:
  Version bump.

  31 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> greybird-0.4.ebuild:
  Missing CCPL-Attribution-ShareAlike-NonCommercial-3.0

  31 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -greybird-0.3.ebuild:
  old

*greybird-0.4 (31 Jan 2012)

  31 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> +greybird-0.4.ebuild:
  Version bump.

  08 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> greybird-0.3.ebuild:
  Missing x11-themes/gtk-engines-unico RDEPEND

*greybird-0.3 (28 Oct 2011)

  28 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> +greybird-0.3.ebuild:
  Initial commit.
