@@ -2,17 +2,19 @@
 Hash: SHA1
 
 DIST greybird-0.6.tar.gz 2009033 RMD160 f283add2c98eac3ed9c389ec8f19b08d786ef695 SHA1 673e60870bc63445485dfc5232b6eadb93fa9670 SHA256 b2f90fcf0f1130b5cae5ff95694ff6f03f157af60af2cd7a07e7ab24150023c0
+DIST greybird-0.7.1.tar.gz 2009442 RMD160 41aba7da78137cef8543ab9e246866cd8154eaf9 SHA1 23d1bcfa7b09bd9303e2e74e1b4a3e4ca26bc719 SHA256 030e9e2affc3f3a3c6dcbbbe0f59ff9d2963e2d7930d22d90f99e575e5bd2686
 EBUILD greybird-0.6.ebuild 907 RMD160 73fc226e64a7632fcedfed73a178ba1a356a8326 SHA1 4a25c3dfa1a962a1c03f7e926d0303786dc58598 SHA256 09b60121328f564ea26be062daf9f96fb994c7c92aed7e4779720b0d9659f112
-MISC ChangeLog 1245 RMD160 dd9f420805fb91b1d53d6e482ddaf9edfe93dd3b SHA1 339ca734f63c0397614c6c95c094258188f5f4b7 SHA256 5df35f1a1b300ce9e14248beb967e442d5eb33129fd5eb8e56a4daa2ffc83a19
+EBUILD greybird-0.7.1.ebuild 915 RMD160 145c7d59a127d004e552c7c5cdb569dca858f72b SHA1 9fefe6d3a8e1b3b68a410fe46a29f75f4c3c6d87 SHA256 eb790fc3ae84c7b7487645a1dfaa87df37f1bf9812de534718add63d23a955ef
+MISC ChangeLog 1371 RMD160 c067cd8f22d99f204843f20e3951b94c1aaaf0e8 SHA1 e244980d208839ff080700e198bb7436a284f946 SHA256 df72ce03ffd6479c816db7c7551a64253539e897f4990ac49be1e0fde0dc8db0
 MISC metadata.xml 271 RMD160 f5550f51d7c9f7bb15177eeb66d3de3f6511f45a SHA1 13cd5d11fbd7f0dfd5967b8757efd71d4d273e23 SHA256 b0ab8f8a76df2649ab818da3d391589e88d0befc9607eb6c3be7f1746b2d4392
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPaXQgAAoJEEdUh39IaPFNQF0H/im84s7Xi9NaHX7u5S7IDqZg
-NOuROKqYJ/CUw0wUhcUaabVTzXkwYFqH1JFevpxUIvQFcwFrDWHa5nSKlEZ9h1Md
-ecmDDZbmviTK79qF3vnRoLXgopphlvWUZKENjADHh0+QkvHsAipjyh+zRVCNCY9V
-kfcQ6eCtlaBG6nDpmuN43pDIl47ozP2VQTKg1GDsxYMrRAfdmEwFc+Ql1mPm30z6
-KSUdaZIEFoTNRZLQAPYXre0hvtfHVcH06CxLc0tbBM896HRO5gXbp0HYohEDLR7m
-x0DRfvpTRpEm+v9IzrB43wLvTsU6SzHBMDrNr/IGWkjxD/Kr8DDw21JjPjiETps=
-=dJbW
+iQEcBAEBAgAGBQJPjIGZAAoJEEdUh39IaPFNYhUH/jl5JohHOYCG2tMZHsGVgg46
+SqKjIc9RbD/vYM0GZY+FrowywyYSuzroAwnx7iTIn6y24JHAKaukIO/VS84yUOG3
+7687tuNACTfyTl8jF7vMuw5/GZVf9cWrcrnrA7y8jkeGfbcJK8GAaZOkfG/cS270
+9978jQemez1mlym/L1GuLt5pwaOyIUkOnEiBv6kQD0L8bG+IoFHpZvftIdCqwfOb
+3xCbSfWUmxBJLqSHvEGhDb05YsTqcEJ/cG+Btvg6CTsz+27CK/a+WyiZzclzpxCs
+0/d3PQjeHWR2xGlUwgTQtX4nkDF30RfZIIWuicxQhfEv8xJhnVMWkJ7TTEN2E58=
+=k6ow
 -----END PGP SIGNATURE-----
